sre-instrumentation-challenge/deploy/kubernetes/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
